<?xml version="1.0"?>
<package format="3">
  <name>cyclone_bridge</name>
  <version>1.0.0</version>
  <description>ROS 1.0 / 2.0 Message Bridge using CycloneDDS</description>
  <maintainer email="whgdms1230@naver.com">PaulKim</maintainer>
  <license>Apache 2.0</license>
  <author email="whgdms1230@naver.com">PaulKim</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>cyclonedds</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
